turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:11: error: not enough arguments for method setCouleurSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	case Color.BLACK => setCouleurSol() ;gauche();avance()
                                         ^LangtonsAnt:12: error: not found: value white
	case Color.WHITE => setCouleurSol(white) ;droite();avance()
                                          ^