turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}


def step() {
	var c = getCouleurSol()
	c match {
	case Color.BLACK => setCouleurSol() ;gauche();avance()
	case Color.WHITE => setCouleurSol(white) ;droite();avance()
}
}
